Completed MVVM v1